@@ -961,7 +961,8 @@ If OUTBUF is not specified, article is retrieved to the current buffer.")
   (let* ((url (shimbun-article-url shimbun header))
 	 ;; The default url used when it is not specified for refresh.
 	 (w3m-current-url url)
-	 (w3m-use-refresh t))
+	 (w3m-use-refresh t)
+	 real)
     (when (shimbun-fetch-url shimbun url nil nil
 			     (shimbun-article-base-url shimbun header))
       (w3m-check-refresh-attribute)
@@ -970,7 +971,9 @@ If OUTBUF is not specified, article is retrieved to the current buffer.")
 		 (not (string-equal url (cdr w3m-current-refresh))))
 	(shimbun-header-set-xref header (cdr w3m-current-refresh))
 	(erase-buffer)
-	(shimbun-article-1 shimbun header)))))
+	(shimbun-article-1 shimbun header))
+      (unless (string-equal url (setq real (w3m-real-url url)))
+	(shimbun-header-set-xref header real)))))
 
 (luna-define-method shimbun-article ((shimbun shimbun) header &optional outbuf)
   (when (shimbun-current-group-internal shimbun)
